Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33068

Warnings: QXcbWindow: Unhandled client message: "_NET_WM_STATE"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.2.0
    • 5.2.0
    • GUI: Window management
    • None
    • Linux/XCB/Kubuntu 13.4
    • a4d4e18c314e533e95212520d68e1bb9fb4794ae

      Lately the dev branch (5.2) outputs a lot of warnings of this kind:

      QWARN : tst_QWidget::showMaximized() QXcbWindow: Unhandled client message: "_NET_WM_STATE"
      QWARN : tst_QWidget::showMaximized() QXcbWindow: Unhandled client message: "WM_CHANGE_STATE"

      As an example run the qwidget unit-test.

        For Gerrit Dashboard: QTBUG-33068
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            frederik Frederik Gladhorn
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes