XCB: Suppress warnings about unhandled client messages.

Introduced by the tray icon refactoring
d8090022f66cc6cff6af5ed2ae702212fd172ff7 among other things.

Task-number: QTBUG-33068
Change-Id: I7c536c68acc2fae39ca30afb401500d0dc8701b1
Reviewed-by: Uli Schlachter <psychon@znc.in>
Reviewed-by: Frederik Gladhorn <frederik.gladhorn@digia.com>
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>